--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -362,7 +362,7 @@ blockquote {
 }
 
 code {
-  background: rgba(230, 235, 237, 0.25);
+  background: #282c34;
   border-radius: 0.375em;
   border: solid 1px rgba(210, 215, 217, 0.75);
   font-family: "Courier New", monospace;
@@ -2419,6 +2419,8 @@ button:disabled,
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   margin: 0 0 2em -6em;
   width: calc(100% + 6em);
 }
@@ -2839,6 +2841,10 @@ button:disabled,
     display: none;
   }
 }
+
+@media screen and (max-width:991px) {
+  
+}
 @media screen and (max-width: 736px) {
   #sidebar .toggle {
     text-indent: 7.25em;
@@ -3124,8 +3130,11 @@ button:disabled,
   #sidebar > .inner {
     width: 18em;
   }
-  #sidebar.inactive {
+  #sidebar {
     margin-left: -18em;
+  }
+  #sidebar.inactive {
+    margin-left: 0em;
   }
   #sidebar .toggle {
     left: 18em;
