--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2705,7 +2705,8 @@ button:disabled,
 #sidebar > .inner {
   padding: 2.22222em 2.22222em 2.44444em 2.22222em;
   position: relative;
-  width: 26em;
+  /* width: 26em; */
+  width: 100%;
 }
 #sidebar > .inner > * {
   border-bottom: solid 2px rgba(210, 215, 217, 0.75);
@@ -2737,7 +2738,8 @@ button:disabled,
   border: 0;
   display: block;
   height: 7.5em;
-  left: 26em;
+  /* left: 26em; */
+  right: -5em;
   line-height: 7.5em;
   outline: 0;
   overflow: hidden;
@@ -2773,7 +2775,7 @@ button:disabled,
   width: inherit;
 }
 #sidebar.inactive {
-  margin-left: -26em;
+  margin-left: -22%;
 }
 @media screen and (max-width: 1680px) {
   #sidebar {
