--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -3211,7 +3211,7 @@ button:disabled,
   background-color: #f5f6f7;
   font-size: 0.9em;
   /* position        : relative; */
-  width: 22%;
+  width: 18%;
 }
 
 #sidebar h2 {
@@ -3221,7 +3221,7 @@ button:disabled,
 #sidebar > .inner {
   padding: 2.22222em 2.22222em 2.44444em 2.22222em;
   position: relative;
-  width: 26em;
+  width: 100%;
 }
 
 #sidebar > .inner > * {
@@ -3258,7 +3258,7 @@ button:disabled,
   border: 0;
   display: block;
   height: 7.5em;
-  left: 26em;
+  right: -22%;
   line-height: 7.5em;
   outline: 0;
   overflow: hidden;
@@ -3297,7 +3297,7 @@ button:disabled,
 }
 
 #sidebar.inactive {
-  margin-left: -26em;
+  margin-left: -18%;
 }
 
 @media screen and (max-width: 1680px) {
