--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -2892,7 +2892,7 @@ button:disabled,
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  margin: 0 0 2em -6em;
+  // margin: 0 0 2em -6em;
   width: calc(100% + 6em);
 }
 
@@ -2905,7 +2905,7 @@ button:disabled,
   -webkit-flex-shrink: 1;
   -ms-flex-shrink: 1;
   flex-shrink: 1;
-  margin: 0 0 6em 6em;
+  // margin: 0 0 6em 6em;
   position: relative;
   width: calc(33.33333% - 6em);
 }
