优化移动端样式

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -2913,6 +2913,7 @@ button:disabled,
 .posts article p {
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  min-height: 58px;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
